# MoDNS

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  CursedDockerfile  Dev_README.md  Dockerfile  Dockerfile.Backend.Dev  Dockerfile.Plugins  Makefile  README.md  cross-compile.Makefile  docker-compose.yaml
.cargo/: config.toml
.github/workflows/: backend-workflow.yml  build-workflow.yml  ci-workflow.yml  packaging-workflow.yml  react-workflow.yml
cli/: Cargo.toml
cli/src/: main.rs  util.rs
cli/src/commands/: mod.rs  plugins.rs
docs/: API.md  CODEOWNERS  plugins.md
docs/assignments/: Gantt chart.xlsx  eds.md
docs/assignments/technical_report/: 1_intro.md  2_designProcess.md  3_hardware_software.md  4_designConsiderations.md  5_works_cited.md  appendices.md  dockerfile  settings.yaml
frontend/: README.md
frontend/dns_frontend/: .dockerignore  CITest.txt  Dockerfile  Dockerfile.Frontend.Dev  Dockerfile.dev  package-lock.json  package.json
frontend/dns_frontend/public/: index.html  manifest.json
frontend/dns_frontend/src/: App.css  App.jsx  Constants.jsx  ProtectedRoute.jsx  index.css  themes.jsx
modns-sdk/: Cargo.toml  build.rs
modns-sdk/src/: conversion.rs  ffi.rs  lib.rs  mem_helpers.rs  safe.rs
modns-sdk/src/helpers/: database.rs  (+4 more)
plugins/: .gitignore  Makefile
plugins/base/: plugin.c
plugins/base-Interceptor/: a.cpp  a.out  myData.json
plugins/base-cache/: Makefile  go.mod  go.sum  main.go  manifest.yaml  plugin.h
plugins/base-datacollector/: Makefile  manifest.yaml
plugins/base-inspector/: Interceptor.out  a.cpp  myData.json
plugins/base-listener/: Makefile  manifest.yaml
plugins/base-resolver/: Makefile  manifest.yaml
plugins/base_listener/: Makefile
plugins/base_resolver/: Makefile
plugins/cache/: Makefile  main.go  plugin.h
plugins/common/: decode.c  deserialize.c  encode.c  logs.c  plugin-common.h  plugin.c  serialize.c
plugins/demo-validator/: Makefile  manifest.yaml  plugin.c
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
server/src/api/: mod.rs  runner.rs
server/src/api/routes/: frontend.rs  mod.rs
server/src/api/runner/: errors.rs  unix.rs
server/src/listeners/: mod.rs
server/src/listeners/api/: mod.rs  routes.rs
server/src/listeners/dns/: mod.rs
server/src/plugins/: executors.rs  handler.rs  loaders.rs  manager.rs  metadata.rs  mod.rs  plugin.rs  response.rs
server/tests/: dnscap.pcapng  listener.rs  modules.rs  plugin_manager.rs
server/tests/test-plugin/: Makefile  manifest.yaml  plugin.c
(+75 files in other folders)
