[package]
name = "modns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
hyper = { version = "0.14.25", features = ["full"] }
hyperlocal = "0.8.0"
tokio = { version = "1.27.0", features = ["rt"] }
uuid = "1.3.0"
modnsd = { path = "../server"}
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
infer = { version = "0.13.0", default-features = false }
tokio-util = { version = "0.7.7", features = ["codec"] }
