[package]
name = "modnsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
futures = "0.3.25"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
warp = "0.3.3"

[dev-dependencies]
cfg-if = "1.0.0"
