[package]
name = "modnsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modns-sdk ={ path = "../modns-sdk" }
bitvec = "1.0.1"
futures = "0.3.25"
log = "0.4.17"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
warp = "0.3.3"
libloading = "0.7.4"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }
serde = "1.0.154"
serde_yaml = "0.9.19"
clap = { version = "4.1.8", features = ["derive", "env"] }
anyhow = "1.0.70"
thiserror = "1.0.39"
env_logger = "0.10.0"

[dev-dependencies]
cfg-if = "1.0.0"
pretty_assertions = "1.3.0"
